@@ -10,6 +10,7 @@ import junit.framework.TestCase;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.fs.ContentSummary;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.io.LongWritable;
@@ -64,31 +65,53 @@ public class TestSymlinkTextInputFormat extends TestCase {
    */
   public void testAccuracy1() throws IOException {
     // First data dir, contains 2 files.
-    writeTextFile(new Path(dataDir1, "file1"),
+    
+    FileSystem fs = dataDir1.getFileSystem(job);
+    int symbolLinkedFileSize = 0;
+    
+    Path dir1_file1 = new Path(dataDir1, "file1");
+    writeTextFile(dir1_file1,
                   "dir1_file1_line1\n" +
                   "dir1_file1_line2\n");
-    writeTextFile(new Path(dataDir1, "file2"),
+    
+    symbolLinkedFileSize += fs.getFileStatus(dir1_file1).getLen();
+    
+    Path dir1_file2 = new Path(dataDir1, "file2");
+    writeTextFile(dir1_file2,
                   "dir1_file2_line1\n" +
                   "dir1_file2_line2\n");
-
+    
     // Second data dir, contains 2 files.
-    writeTextFile(new Path(dataDir2, "file1"),
+    
+    Path dir2_file1 = new Path(dataDir2, "file1");
+    writeTextFile(dir2_file1,
                   "dir2_file1_line1\n" +
                   "dir2_file1_line2\n");
-    writeTextFile(new Path(dataDir2, "file2"),
+    
+    Path dir2_file2 = new Path(dataDir2, "file2");
+    writeTextFile(dir2_file2,
                   "dir2_file2_line1\n" +
                   "dir2_file2_line2\n");
 
+    symbolLinkedFileSize += fs.getFileStatus(dir2_file2).getLen();
+    
     // A symlink file, contains first file from first dir and second file from
     // second dir.
     writeSymlinkFile(
         new Path(symlinkDir, "symlink_file"),
         new Path(dataDir1, "file1"),
         new Path(dataDir2, "file2"));
+    
+    SymlinkTextInputFormat inputFormat = new SymlinkTextInputFormat();
+    
+    //test content summary
+    ContentSummary cs = inputFormat.getContentSummary(symlinkDir, job);
+    
+    assertEquals(symbolLinkedFileSize, cs.getLength());
+    assertEquals(2, cs.getFileCount());
+    assertEquals(0, cs.getDirectoryCount());
 
     FileInputFormat.setInputPaths(job, symlinkDir);
-
-    SymlinkTextInputFormat inputFormat = new SymlinkTextInputFormat();
     InputSplit[] splits = inputFormat.getSplits(job, 2);
 
     log.info("Number of splits: " + splits.length);
@@ -126,6 +149,13 @@ public class TestSymlinkTextInputFormat extends TestCase {
     FileInputFormat.setInputPaths(job, symlinkDir);
 
     SymlinkTextInputFormat inputFormat = new SymlinkTextInputFormat();
+    
+    ContentSummary cs = inputFormat.getContentSummary(symlinkDir, job);
+    
+    assertEquals(0, cs.getLength());
+    assertEquals(0, cs.getFileCount());
+    assertEquals(0, cs.getDirectoryCount());
+    
     InputSplit[] splits = inputFormat.getSplits(job, 2);
 
     log.info("Number of splits: " + splits.length);
